; ModuleID = '/home/carl/AnghaBench/beanstalkd/extr_darwin.c_sockinit.c'
source_filename = "/home/carl/AnghaBench/beanstalkd/extr_darwin.c_sockinit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kq = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"kqueue\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sockinit() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 (...) @kqueue()
  store i32 %2, i32* @kq, align 4
  %3 = load i32, i32* @kq, align 4
  %4 = icmp eq i32 %3, -1
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = call i32 @twarn(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %1, align 4
  br label %8

7:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %8

8:                                                ; preds = %7, %5
  %9 = load i32, i32* %1, align 4
  ret i32 %9
}

declare dso_local i32 @kqueue(...) #1

declare dso_local i32 @twarn(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
